# AI_Robot_Agent

./: .gitattributes  .gitignore
doc/: command_lines.txt
install/: local_setup.sh  setup.sh
install/emotion_agent/lib/emotion_agent/: bandit_agent  emotion_model_node  emotion_stub  expression_controller  face_publisher  gz_avatar_motion  gz_simple_bot_controller  reward_keyboard
install/emotion_agent/share/emotion_agent/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/emotion_agent/share/emotion_agent/launch/: demo.launch.py
log/: latest_build
models/: best_wav2vec2_iemocap.pt
src/emotion_agent/: package.xml  setup.cfg  setup.py
src/emotion_agent/emotion_agent/: bandit_agent.py  emotion_model_node.py  emotion_stub.py  expression_controller.py  face_publisher.py  gz_avatar_motion.py  gz_simple_bot_controller.py  reward_keyboard.py
src/emotion_agent/launch/: demo.launch.py
